// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 5.- Pruebas en el <GifExpertApp />   * Debe de Mostrar el Componente correctamente 1`] = `
<Fragment>
  <h2
    className="title"
  >
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[` 5.- Pruebas en el <GifExpertApp />   * Debe de Mostrar una lista de Categorias 1`] = `
<Fragment>
  <h2
    className="title"
  >
     GifExpertApp 
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
